Fork modernization + JAR hardening Phases 1-3 (v3.10.13-15)
Single-commit squash of conmilo's modernization + security hardening work
on top of pducharme/UniFi-Video-Controller. UniFi Video is EOL (June 2024);
this fork keeps the controller running on a modern, supply-chain-pinned
stack with zero unsuppressed HIGH/CRITICAL CVEs.

Image stack:
  Base       phusion/baseimage:0.11 (Ubuntu 18.04 EOL)  ->  ubuntu:24.04
  JRE        AdoptOpenJDK 8u265                          ->  Temurin 21
  MongoDB    4.0.x (bionic apt repo)                     ->  4.4.29 (+ 4.2.25 fCV stepper)
  log4j      bundled 2.1                                 ->  2.17.2
  Jackson    2.7.4                                       ->  2.15.4 (Phase 2)
  Tomcat     7.0.86                                      ->  9.0.118 + airvision Bootstrap call-site rewrite (Phase 3)
  libssl     untracked                                   ->  pinned 1.1.1f-1ubuntu2.24
  Init       runit (phusion)                             ->  tini PID 1

What's in this commit:

1. Modernization (v3.10.13-1 .. v3.10.13-7)
   - ubuntu:24.04 base pinned by manifest digest, Temurin JRE 8, MongoDB 4.4
     with one-time fCV 4.0 -> 4.2 -> 4.4 migration
   - All 11 ports preserved (TCP 1935/6666/7080/7442/7443/7444/7445/7446/7447,
     UDP 7004/10001); all env vars preserved (PUID, PGID, UMASK, TZ, DEBUG,
     CREATE_TMPFS, USE_HOST_TMPFS, USE_UNIFI_TMPFS)
   - 6 supply-chain artifacts SHA256-pinned and verified at build time
   - GHCR + GitHub Release distribution with .tar.zst, .tar.gz, SBOM
   - hadolint + Trivy CI on every PR, weekly base verification, monthly rebuild
   - Dependabot watches Actions + base image digest

2. JAR hardening Phase 1 / Phase 1B (v3.10.13-8 .. -9)
   - In-place content swap preserving filenames (airvision.jar's Class-Path
     attribute pins deps by exact filename):
       commons-collections        3.2     -> 3.2.2
       commons-io                 2.6     -> 2.18.0
       jackson-core               2.7.4